Added target unit.

--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,11 @@
               checkreturn="true"/>
     </target>
 
+    <!-- Runs all unit tests -->
+    <target name="unit">
+        <exec command="bin/phpunit test" passthru="true" checkreturn="true"/>
+    </target>
+
     <target name="build">
         <echo message=""/>
     </target>
