--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "setbased/abc-exception": "^1.1.0",
     "setbased/abc-exception-handler": "^1.0.0",
     "setbased/helper-code-store-php": "^2.1.1",
-    "setbased/php-stratum": "*",
+    "setbased/php-stratum-middle": "^4.0.0",
     "symfony/console": "^3.0.0 || ^4.0.0"
   },
   "require-dev": {
