--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,20 @@
 {
-  "name": "setbased/abc-exception-handler-core",
-  "description": "ABC-Framework: Core Exception Handler",
+  "name": "plaisio/exception-handler-core",
+  "description": "PhpPlaisio: Core Exception Handler",
   "keywords": [
-    "ABC-Framework",
-    "Exception",
-    "Handling",
-    "Core"
+    "PhpPlaisio",
+    "Exception Handler"
   ],
-  "type": "library",
   "license": "MIT",
   "require": {
     "php": ">=7.1.0",
     "ext-dom": "*",
     "ext-libxml": "*",
     "composer/composer": "^1.0.0",
-    "setbased/abc": "*",
-    "setbased/abc-http-header": "^2.0.2",
-    "setbased/abc-exception": "^2.0.0",
-    "setbased/abc-exception-handler": "^1.0.0",
+    "plaisio/exception": "^1.0.0",
+    "plaisio/exception-handler": "^1.0.0",
+    "plaisio/kernel": "^1.0.0",
+    "plaisio/response-core": "^1.0.0",
     "setbased/helper-code-store-php": "^2.1.1",
     "setbased/php-stratum-middle": "^5.0.0",
     "symfony/console": "^4.0.0"
@@ -25,11 +22,11 @@
   "require-dev": {
     "phing/phing": "^2.0.0",
     "phpunit/phpunit": "^7.0.0 || ^8.0.0",
-    "setbased/abc-console": "*"
+    "plaisio/console": "^0.2.0"
   },
   "autoload": {
     "psr-4": {
-      "SetBased\\Abc\\ExceptionHandler\\": "src/"
+      "Plaisio\\ExceptionHandler\\": "src/"
     }
   },
   "config": {
