--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "composer/composer": "^1.0",
-    "plaisio/console": "^0.2.15",
+    "plaisio/console": "^1.0",
     "plaisio/exception": "^1.1",
     "plaisio/exception-handler": "^1.1",
     "plaisio/kernel": "^1.1",
@@ -23,8 +23,7 @@
   },
   "require-dev": {
     "phing/phing": "^2.0",
-    "phpunit/phpunit": "^9.0",
-    "plaisio/console": "^0.2.3"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
