--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,16 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "composer/composer": "^1.0",
-    "plaisio/console": "^1.0",
+    "plaisio/console": "^2.0.1",
+    "plaisio/error-logger": "^1.2",
     "plaisio/exception": "^1.1",
-    "plaisio/exception-handler": "^1.1",
-    "plaisio/kernel": "^2.0",
-    "plaisio/obfuscator": "^1.2",
+    "plaisio/exception-handler": "^1.2",
+    "plaisio/kernel": "^3.1.1",
+    "plaisio/obfuscator": "^2.0",
+    "plaisio/request": "^0.10.3",
+    "plaisio/request-logger": "^1.2",
     "plaisio/response-core": "^1.1",
+    "plaisio/session": "^3.0",
     "setbased/helper-code-store-php": "^2.4.1",
     "setbased/php-stratum-middle": "^5.2",
     "symfony/console": "^5.0"
