--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
     "plaisio/console": "^2.0.1",
     "plaisio/error-logger": "^1.2",
     "plaisio/exception": "^1.1",
-    "plaisio/exception-handler": "^1.2",
+    "plaisio/exception-handler": "^2.0",
     "plaisio/kernel": "^3.1.1",
     "plaisio/obfuscator": "^2.0",
     "plaisio/request": "^0.11",
     "plaisio/request-logger": "^1.2",
-    "plaisio/response-core": "^1.1 || ^2.0",
+    "plaisio/response-core": "^2.0",
     "plaisio/session": "^4.0",
     "setbased/helper-code-store-php": "^2.4.1",
     "setbased/php-stratum-middle": "^5.2",
