--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,24 @@
+filter:
+  dependency_paths:
+    - "vendor/"
+  excluded_paths:
+    - 'test/'
+
 build:
-  tests:
-    override:
-      - command: './bin/phing unit'
-        coverage:
-          file:   'test/coverage.xml'
-          format: 'php-clover'
+  environment:
+    php:
+      pecl_extensions:
+        - inotify
+
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
+
+    tests:
+      override:
+        - command: './bin/phing unit'
+          coverage:
+            file:   'test/coverage.xml'
+            format: 'php-clover'
