--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /.phpunit.result.cache
 /bin/
 /composer.lock
+/custom.task.properties
+/custom.type.properties
 /test/Command/Foo.php
 /test/coverage.xml
 /test/report/
