--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.1",
     "ext-dom": "*",
     "ext-libxml": "*",
-    "plaisio/console": "^2.4.6",
+    "plaisio/console": "^3.0.0",
     "plaisio/error-logger": "^1.2.0",
     "plaisio/exception": "^1.1.0",
     "plaisio/exception-handler": "^2.0.0",
@@ -18,15 +18,18 @@
     "plaisio/obfuscator": "^2.0.0",
     "plaisio/request": "^0.13.0",
     "plaisio/request-logger": "^1.2.0",
-    "plaisio/response-core": "^2.3.0",
-    "plaisio/session": "^4.0.0",
+    "plaisio/response-core": "^2.8.0",
+    "plaisio/session": "^5.0.0",
     "setbased/helper-code-store-php": "^2.4.2",
     "setbased/php-stratum-middle": "^5.7.0",
-    "symfony/console": "^5.2.0"
+    "symfony/console": "^6.2.5"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require-dev": {
-    "phing/phing": "^2.16.3",
-    "phpunit/phpunit": "^9.5.0"
+    "phing/phing": "^3.0.0-RC4",
+    "phpunit/phpunit": "^9.6.3",
+    "plaisio/console-kernel": "^1.0.1"
   },
   "autoload": {
     "psr-4": {
@@ -35,6 +38,9 @@
   },
   "config": {
     "bin-dir": "bin/",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "phing/phing-composer-configurator": true
+    }
   }
 }
