--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,22 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "plaisio/console": "^3.0.0",
-    "plaisio/error-logger": "^1.2.0",
-    "plaisio/exception": "^1.1.0",
-    "plaisio/exception-handler": "^2.0.0",
-    "plaisio/kernel": "^3.1.1",
+    "plaisio/error-logger": "^1.3.0",
+    "plaisio/exception": "^1.2.0",
+    "plaisio/exception-handler": "^2.1.0",
+    "plaisio/kernel": "^3.2.1",
     "plaisio/obfuscator": "^2.0.0",
-    "plaisio/request": "^0.13.0",
-    "plaisio/request-logger": "^1.2.0",
+    "plaisio/request": "^1.0.0",
+    "plaisio/request-logger": "^1.3.0",
     "plaisio/response-core": "^2.8.0",
     "plaisio/session": "^5.0.0",
-    "setbased/helper-code-store-php": "^2.4.2",
-    "setbased/php-stratum-middle": "^5.7.0",
+    "setbased/helper-code-store-php": "^2.6.0",
+    "setbased/php-stratum-middle": "^5.11.0",
     "symfony/console": "^6.2.5"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "require-dev": {
-    "phing/phing": "^3.0.0-RC4",
-    "phpunit/phpunit": "^9.6.3",
+    "phing/phing": "^3.0.0",
+    "phpunit/phpunit": "^10.5.35",
     "plaisio/console-kernel": "^1.0.1"
   },
   "autoload": {
