--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     "plaisio/error-logger": "^1.4.0",
     "plaisio/exception": "^1.3.0",
     "plaisio/exception-handler": "^2.2.0",
-    "plaisio/kernel": "^3.3.0",
+    "plaisio/kernel": "^3.3.1",
     "plaisio/obfuscator": "^2.2.0",
-    "plaisio/request": "^1.0.1",
+    "plaisio/request": "^2.0.0",
     "plaisio/request-logger": "^1.4.0",
     "plaisio/response-core": "^2.9.0",
     "plaisio/session": "^5.1.0",
@@ -26,12 +26,17 @@
   },
   "require-dev": {
     "phing/phing": "^3.0.1",
-    "phpunit/phpunit": "^11.5.22",
+    "phpunit/phpunit": "^11.5.25",
     "plaisio/console-kernel": "^1.2.0"
   },
   "autoload": {
     "psr-4": {
       "Plaisio\\ExceptionHandler\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Plaisio\\ExceptionHandler\\Test\\": "test/"
     }
   },
   "config": {
